# Cloud_Storage

./: .gitignore  CMakeLists.txt  README.md  architecture_detail.md  compile_commands.json  mock_rag_search.cpp  problem.md  qwen_stream_client.cpp  rag_real  test.cpp  test.md  test.txt  test_embedding.cpp  test_llm  test_qwen.cpp  way_to_go.md  面试准备.md
.cache/clangd/index/: AsyncLogger.hpp.5023EE87A811432A.idx  AsyncWorker.hpp.85DA0426A77A16CD.idx  Level.hpp.C5337520867905CE.idx  LogFlush.hpp.3115281E62459830.idx  Message.hpp.C2BF45D033D7E219.idx  ThreadPoll.hpp.2EAF405E66CF6BFD.idx  Util.hpp.F11F96FF2734E2B1.idx  ZookeeperUtil.cpp.21594EDB6C7AB216.idx  ZookeeperUtil.cpp.57126154452599AD.idx  ZookeeperUtil.hpp.319793E389B15C14.idx  ZookeeperUtil.hpp.BEEC64B7B1197F45.idx  address.hpp.369DAF0AD48108D5.idx  address.hpp.778324C1F423E329.idx  address.hpp.D5414FEBB46CA938.idx  address.hpp.E0A79CE92B9F4205.idx  address.ipp.67E29C02087E5524.idx  address.ipp.D09C770500F3CEB3.idx  address_v4.hpp.21307E643637710D.idx  address_v4.hpp.75B316787CEC4698.idx  address_v4.hpp.C5C606485BA2F729.idx  address_v4.hpp.D89040DE33EFE77D.idx  address_v4.ipp.1E63BEF6F8195367.idx  address_v4.ipp.C2E62D658FD8743C.idx  address_v4_iterator.hpp.BA96CC366488AD6A.idx  address_v4_iterator.hpp.CA0269012FE76698.idx  address_v4_range.hpp.5A31E701F57BC529.idx  address_v4_range.hpp.9D9C9D304FF44DBB.idx  address_v6.hpp.1B0020393C733A8B.idx  address_v6.hpp.218239AAD0550454.idx  address_v6.hpp.946859D2C1979EE4.idx  address_v6.hpp.DB15528E1FD7D378.idx  address_v6.ipp.F5D54417F266D0C6.idx  address_v6.ipp.FD444D6F6D25EAC5.idx  address_v6_iterator.hpp.46487EB9E310AD46.idx  address_v6_iterator.hpp.C85E9C8B5F374A96.idx  address_v6_range.hpp.2B6A0B4E21C9A416.idx  address_v6_range.hpp.48CCDF09C54CE4F9.idx  allocator.hpp.B856E4F27AE61E34.idx  allocator.hpp.D53CCBA7FCF0E17F.idx  ansicolor_sink.h.B0C15B26118A67F4.idx  (+859 more)
.trae/specs/add-ai-chat/: checklist.md  spec.md  tasks.md
Test/: testRpc.cpp
config/: config.conf  gateway_config.env
include/log/: AsyncLogger.hpp  AsyncWorker.hpp  Level.hpp  LogFlush.hpp  Message.hpp  ThreadPoll.hpp  Util.hpp
include/resource/: index.html
include/service/: embedding_client.hpp  gateway.hpp  hash.hpp  qwen_stream_client.hpp  route.hpp  storage_router.hpp
src/log/: gateway.cpp  main.cpp  server.cpp  storage_node.cpp
